# resy-booking-bot

./: Cargo.toml  README.md
src/: main.rs
src/structs/: book.rs  details.rs  login.rs  times.rs
